# Pulse

./: .clang-format  .gitignore  .ocamlformat  .pre-commit-config.yaml  AUTHORS  CHANGES.md  LICENSE  Makefile  Pulse.opam  README.md  dune-project  flake.nix  format  gen-release.sh  main.cc  parser.ml  pulse.cpp  pulse.opam  tokenizer.ml
docs/: cli.md  features.md  gram.g4  grammar.ebnf  grammar.txt  instructions.md  ir.md  pulse_grammar.md  vm_and_bytecode.md
docs/examples/: add.pulse  closures.pulse  hello_world.pulse  if.pulse  while.pulse
examples/: .gitignore  add.pulse  array.pulse  basic.pulse  complex.pul  fibo.pulse  hello_world.pulse  if.pulse  long.pul  long_add_sub.pul  nice.pulse  rule110.pulse  while.pulse
lib/: astree.ml  binder.ml  bindtree.ml  bytecode.ml  cli.ml  codegen.ml  codegen_ir.ml  compiler.ml  driver.ml  dune  error.ml  error.mli  io.ml  ir.ml  lexer.ml  lexer.mli  location.ml  location.mli  parser.ml  parser.mli  parser.mliff  parsetree.ml  parsetree.mli  qbe.ml  report.ml  symbol.ml  symbol.mli  token.ml  token.mli  tokenizer.ml  tokenizer.mli  typechecker.ml  types.ml  typetree.ml  utils.ml  version.ml  vm.ml
runtime/: .gitignore  Makefile  array.c  array.h  io.c  io.h  io.s  runtime.c  syscalls.s
source/: ast.c  interpreter.c  lexer.c  parser.c  pulse.c  token.c  types.c
source/include/: ast.h  interpreter.h  lexer.h  parser.h  token.h  types.h
src/: pulcli.py  pulse.py
test/: dune  simple_addition.pul  test_pulse.ml
test/cli/: basic.t  basic_variable.t  compile_then_run.t  disasm.t  div_by_zero.t  dune  error.t  error_variable.t  hell_world.t
